Add window buttons

--- a/Content/Assets/Localization/IT/de.txt
+++ b/Content/Assets/Localization/IT/de.txt
@@ -1,5 +1,4 @@
-English=Englisch
-German=Deutsch
-Italian=Italienisch
 Window=Fenster
+Layers=Schichten
 Hierarchy=Hierarchie
+Attributes=Eigenschaften
